# clang-test-coverage

./: CMakeLists.txt  README.txt
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  primality.cpp  primality.h
tests/: CMakeLists.txt  test_primality.cpp
